--- a/resume_ranking.ipynb
+++ b/resume_ranking.ipynb
@@ -48,7 +48,7 @@
     "    # Combine job description with resumes\n",
     "    documents = [job_description] + resumes\n",
     "    vectorizer = TfidfVectorizer().fit_transform(documents)\n",
-    "    vectors vectorizer.toarray()\n",
+    "    vectors=vectorizer.toarray()\n",
     "\n",
     "    # Calculate cosine similarity\n",
     "    job_description_vector = vectors[0]\n",
